# HATA

./: .gitignore  Cargo.toml
src/: app.rs  args.rs  ha.rs  main.rs  tui.rs
src/types/: app.rs  events.rs  lovelace.rs  responses.rs
