[package]
name = "HATA"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3"
indexmap = "2.13.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time", "macros"]}
tokio-tungstenite = { version = "0.29.0" }
